style.less
@block: 8rem;
@cell: @block/10;

@gray-base: #000;
@gray-dark: lighten(@gray-base, 20%); // #333
@gray-light: lighten(@gray-base, 46.7%); // #777
@gray-lighter: lighten(@gray-base, 93.5%); // #eee
@footer-sitemap-hover-bg: rgba(255, 255, 255, 0.05);

html {
  background: #222;
}

body {
  font-size: 2*@cell;
  font-weight: 300;
}

h1, h2, h3 {
  font-weight: normal;
}

p {
  &, &:last-child {
    margin-bottom: 2*@cell;
  }
}

.carousel-control {
  font-size: 4*@cell;
}

.navbar-brand {
  font-weight: normal;
  color: @gray-dark !important;
}

.header {
  position: relative;
  background: @gray-lighter;
  text-align: center;
  font-size: 2.5*@cell;
  h1, h2 {
    font-size: 6*@cell;
    font-weight: 300;
  }
  .breadcrumb {
    background: transparent;
    font-size: small;
    margin: -2.5*@cell 0 0 0;
    padding: 0;
    height: 2.5*@cell;
    opacity: 0.5;
  }
}

.header-top {
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
}

.header-body {
  padding: 1.5*@block 0;
  background: no-repeat center center;
  background-size: cover;
  body.not-front & {
    padding: @block 0;
  }  
}

.header-bottom {
  position: absolute;
  bottom: 0;
  width: 100%;  
  .nav-tabs {
    margin-bottom: 0;
  }
}

.main {
  padding: @block/2 0 @block/4 0;
}

.main-col {
  margin-bottom: @block/4;
}

.bottom {
  background: @gray-lighter;
  padding: @block/2 0;
}

.region-share {
  .at-share-btn {
    float: left;
    width: 20%;
    max-width: none !important;
    max-height: 6*@cell !important;
    margin: 0 !important;
    padding: @cell;
    text-align: center;
    cursor: pointer;
  }
  .at_flat_counter {
    float: left;
    margin: @cell 0 @cell -0.75*@block !important;
  }
}

.footer {
  background: #222;
  color: @gray-light;
  margin-top: 0;
  border: none;
  text-align: center;
}

.footer a {
  color: lighten(@gray-light, 15%);
  text-decoration: none;
  &:hover {
    color: white;
  }
}

.footer {
  padding: @block/4 0;
  hr {
    border-color: @gray-dark;
  }
  .block {
    padding: @block/4 0;
    + .block {
      border-top: 1px solid @gray-dark;
    }
  }
}

#block-menu-menu-footer-sitemap {
  text-align: left;
  li {
    margin-top: @cell/2;
  }
  li.root {
    margin-bottom: 2*@cell;
    > a {
      text-transform: uppercase;
      font-size: 1.25*@cell;
      letter-spacing: 2px;      
    }
    > ul {
      margin-top: 2*@cell;
    }
  }
}

